# WHFC

./: CMakeLists.txt  PaToH.cpp  RecursiveBisection.cpp  snapshot_runner.cpp  snapshot_tester.cpp  test_csr.cpp  test_kway.cpp  test_kway_parallel.cpp  test_patoh.cpp  test_rb.cpp
algorithm/: cutter_state.h  dinic.h  dinic_parallel.h  ford_fulkerson.h  grow_assimilated.h  hyperflowcutter.h  push_relabel.h
datastructure/: LawlerFlowHypergraph.h  bitset_reachable_sets.h  border.h  copyable_atomic.h  distance_reachable_sets.h  flow_hypergraph.h  flow_hypergraph_builder.h  hypergraph.h  isolated_nodes.h  lawler_flow_hypergraph.h  mock_builder.h  partition_ca.h  partition_threadsafe.h  queue.h  reachable_checker.h  reachable_sets_base.h  timestamp_reachable_sets.h
flow_algorithms/: dinic.h  dinic_parallel.h  dinic_thread_local_vectors.h  ford_fulkerson.h  push_relabel.h  push_relabel_parallel.h
hyperflowcutter/: cutter_state.h  grow_assimilated.h  piercing.h
io/: hmetis_io.h
partitioner/: config.h  fhgb_extraction.h  fhgb_extraction_parallel.h  fhgb_extraction_parallel_base.h  k_way_refiner.h  k_way_refiner_parallel.h  recursive_bisection.h  two_way_refiner_interface.h  whfc_refiner_two_way.h
push_relabel/: flow_hypergraph.h  flow_hypergraph_builder.h  lawler_fhgb_extraction_parallel.h  lawler_flow_hypergraph.h  lawler_flow_hypergraph_parallel.h  push_relabel.h  push_relabel_parallel.h
recursive_bisection/: config.h  fhgb_extraction.h  fhgb_extraction_parallel.h  fhgb_extraction_parallel_base.h  hypergraph.h  k_way_refiner.h  k_way_refiner_parallel.h  mock_builder.h  null_refiner.h  partition.h  partition_base.h  partition_ca.h  partition_threadsafe.h  recursive_bisection.h  refinement.h  tbb_thread_pinning.h  (+3 more)
(+5 files in other folders)
